--- a/templates/base.twig
+++ b/templates/base.twig
@@ -133,7 +133,9 @@
 	<script type="text/javascript" src="{{ path_for('Start') }}scripts/utils/sendPost.js{{ versionerp }}"></script>
 	<script type="text/javascript" src="{{ path_for('Start') }}scripts/utils/utils.js{{ versionerp }}"></script>
 	<script type="text/javascript" src="{{ path_for('Start') }}scripts/modalAccountState.js{{ versionerp }}"></script>
-	<span class="loaderback" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(1, 1, 1, .6); z-index:998; display: none;"></span>
-	<span class="loader" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index:999; display: none;"></span>
+	{# <span class="loaderback" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(1, 1, 1, .6); z-index:998; display: none;"></span>
+	<span class="loader" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index:999; display: none;"></span> #}
+	<span class="loaderback"></span>
+	<span class="loader"></span>
 </body>
 </html>
