--- a/templates/modalsPointSale.twig
+++ b/templates/modalsPointSale.twig
@@ -40,7 +40,7 @@
 			</div>
 			<div class="modal-footer justify-content-between">
 				<button  id="btnCancelTypeVoucher" onclick="cancelTypeVoucher()" type="button" class="btn btn-danger shadow-sm" data-dismiss="modal"style="float:right;"><span class="maintext"> Cancelar </span> <span class="shortcut"> (Esc) </span></button>
-				<button id="btnConfirmTypeVoucher" onclick="confirmTypeVoucher('modalSetTypeVoucher')" type="button" class="btn btn-success shadow-sm" onkeypress="return keyPressSetTypeVoucher(event, null, null)">Confirmar</button>
+				<button id="btnConfirmTypeVoucher" onclick="confirmTypeVoucher('modalSetTypeVoucher')" type="button" class="btn btn-success shadow-sm" onkeypress="return keyPressSetTypeVoucher(event, null, null)" style="float:right;"><span class="maintext"> Confirmar </span> <span class="shortcut"> (Enter) </span></button>
 			</div>
 		</div>
 	</div>
@@ -119,7 +119,7 @@
                     </button>
                 </div>
 
-				<button id="btnConfirmPOSPayment" onclick="confirmPOSPayment()" type="button" class="btn btn-success shadow-sm"style="float:right;"><span class="maintext"> Confirmar </span> <span class="shortcut"> (Enter) </span></button>
+				<button id="btnConfirmPOSPayment" onclick="confirmPOSPayment()" type="button" class="btn btn-success shadow-sm" style="float:right;"><span class="maintext"> Confirmar </span> <span class="shortcut"> (Enter) </span></button>
 			</div>
 		</div>
 	</div>
