--- a/templates/modalAddProduct.twig
+++ b/templates/modalAddProduct.twig
@@ -19,7 +19,7 @@
 					</div>
 					<div class="form-group col-md-7">
 						<label for="inputDescriptionProduct" class="col-form-label col-form-label-sm obligatorio">Descripción</label>
-						<input type="search" list="listProducts" class="form-control form-control-sm shadow-sm" id="inputDescriptionProduct" onsearch="getSuggestionProduct(this)" autocomplete="off" onkeyup="this.onsearch()" onkeypress="return keyPressAddDetail(event, this.value, 50)" tabindex=2><!--onkeypress="this.onchange()"-->
+						<input type="search" list="listProducts" class="form-control form-control-sm shadow-sm" id="inputDescriptionProduct" {% if suggestProducts == "SI" %} onsearch="getSuggestionProduct(this)" onkeyup="this.onsearch()" {% endif %}autocomplete="off" onkeypress="return keyPressAddDetail(event, this.value, 50)" tabindex=2><!--onkeypress="this.onchange()"-->
 						<datalist id="listProducts" ></datalist>
 					</div>
 					<div class="form-group">
