--- a/templates/pointsale.twig
+++ b/templates/pointsale.twig
@@ -31,7 +31,7 @@
 							<button class="btn btn-sm background-template-color2 text-template-background shadow-sm" onclick="openModalAddProduct()" id="buttonAgregarArticulo" tabindex="8">Agregar Artículo (+)<i class="fas fa-cart-plus"></i></button>
 							{% endif %}
 							{% if listProducts == "SI" %}
-						<button data-toggle="modal" class="btn btn-sm background-template-color2 text-template-background shadow-sm" onclick="openModalGetPrices('normal', 1)">Lista de Precios (Shift +)<i class="fas fa-cart-plus"></i></button>
+						<button data-toggle="modal" class="btn btn-sm background-template-color2 text-template-background shadow-sm" id="buttonListaPrecios" onclick="openModalGetPrices('normal', 1)">Lista de Precios (Shift +)<i class="fas fa-cart-plus"></i></button>
 							{% endif %}
 						</div>
 
