--- a/templates/settings.twig
+++ b/templates/settings.twig
@@ -324,7 +324,7 @@
 							</div>
 							<p class="ml-2 mb-0">Manejo de stock.</p>
 						</div>
-						<div class="input-group">
+						{# <div class="input-group">
 							<div class="input-group-prepend">
 								<label class="switch mb-0">
 									<input id="VER_SIEMPRE_CLIENTE" type="checkbox" onchange="updateConfigurationBoolean(this)">
@@ -332,6 +332,15 @@
 								</label>
 							</div>
 							<p class="ml-2 mb-0">Mostrar siempre el cliente (Punto de venta).</p>
+						</div> #}
+						<div class="input-group">
+							<div class="input-group-prepend">
+								<label class="switch mb-0">
+									<input id="SUGERIR_PRODUCTOS_DE_LISTA_ARTICULOS" type="checkbox" onchange="updateConfigurationBoolean(this)">
+									<span class="slider round"></span>
+								</label>
+							</div>
+							<p class="ml-2 mb-0">Sugerir productos de la lista (Punto de venta).</p>
 						</div>
 						<div class="input-group">
 							<div class="input-group-prepend">
@@ -670,6 +679,8 @@
 	</div>
 </div>
 {%block script%}
+<script type="text/javascript" src="{{ path_for('Start') }}scripts/index.js{{ versionerp }}"></script>
+
 <script type="text/javascript" src="{{ path_for('Start') }}scripts/utils/backup.js{{ versionerp }}"></script>
 <script type="text/javascript" src="{{ path_for('Start') }}scripts/configuration.js{{ versionerp }}"></script>
 {% if systemSession.superUser == 'SI' %}
